horizontal scrollbar fix

--- a/src/app/views/projects/projects.component.scss
+++ b/src/app/views/projects/projects.component.scss
@@ -7,7 +7,8 @@ $overlay-color: white;
     color: $text-dark;
     min-height: 100vh;
     height: 100%;
-
+    padding: 20px;
+    
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
@@ -35,9 +36,7 @@ $overlay-color: white;
 }
 
 app-timeline {
-    width: 100vw;
     max-width: 1000px;
-    margin: 30px;
 }
 
 app-timeline-label {
@@ -85,11 +84,5 @@ app-project-card {
                 justify-content: flex-end;
             }
         }
-    }
-}
-
-@media screen and (max-width: $mobile-width) {
-    .container {
-        padding-left: 30px;
     }
 }
